@@ -1,3 +1,9 @@
+2009-04-04  Dave Morrison  <drm@finkproject.org>
+
+	* Validation.pm: Allow "new-style" GPL license fields which follow 
+	the string "GPL" with either "2", "3", or "23", optionally followed 
+	by "+".
+
 2009-04-03  Daniel Macks  <dmacks@netspace.org>
 
 	* Engine.pm: fink.conf NotifyPlugin "xterm" token controls xterm
